--- a/Logic/Logic.Ui/Logic.Ui.csproj
+++ b/Logic/Logic.Ui/Logic.Ui.csproj
@@ -22,18 +22,18 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DiceRoller" Version="4.0.0" />
-    <PackageReference Include="Fody" Version="6.0.0">
+    <PackageReference Include="DiceRoller" Version="4.1.0" />
+    <PackageReference Include="Fody" Version="6.2.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Jot" Version="2.0.3" />
-    <PackageReference Include="MahApps.Metro" Version="2.0.0-alpha0531" />
-    <PackageReference Include="MahApps.Metro.IconPacks" Version="3.0.0-alpha0245" />
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="3.1.0-preview1.19506.1" />
+    <PackageReference Include="Jot" Version="2.1.7" />
+    <PackageReference Include="MahApps.Metro" Version="2.2.0" />
+    <PackageReference Include="MahApps.Metro.IconPacks" Version="4.4.0" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="3.1.6" />
     <PackageReference Include="MvvmLightLibsStd10" Version="5.4.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="PropertyChanged.Fody" Version="3.1.3" />
+    <PackageReference Include="PropertyChanged.Fody" Version="3.2.8" />
     <PackageReference Include="SimpleSockets" Version="1.2.20" />
   </ItemGroup>
 
