--- a/Ui/Ui.Desktop/Ui.Desktop.csproj
+++ b/Ui/Ui.Desktop/Ui.Desktop.csproj
@@ -19,6 +19,7 @@
     <RepositoryUrl>https://github.com/markuskonojacki/PhexensWuerfelraum</RepositoryUrl>
     <ApplicationIcon>Resources\AppIcon.ico</ApplicationIcon>
     <StartupObject>PhexensWuerfelraum.Ui.Desktop.App</StartupObject>
+    <AssemblyVersion>3.0.0.0</AssemblyVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
